# GoodRacer

./: .gitignore  .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
include/: .gitignore  ezracer_config.h.in  goodracer_config.h.in  goodracer_system.h  goodracer_utils.h
src/: Makefile.am  main.c  system.c
